* Replace the FD used for fopendir() instead of closing the old one - according   to the specs, the application may still use the FD without changing its state,   and only closedir() should finally close it. * This fixes bug #5055.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34362 a95241bf-73f2-0310-859d-f6bbb57e9c96